Adicionado mcmmoSkill true por padrão